k8s/Nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: laravel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: laravel-code
              mountPath: /var/www/   # ✅ Laravel code ko mount karna hai
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: laravel-code
          persistentVolumeClaim:
            claimName: laravel-pvc   # ✅ Same PVC jo Laravel ke liye use ho raha hai
